arm64: configs: somc: update auto-generated defconfig for all platforms
This update is generated automatically by using the script update_defconfig.sh which is maintained at this linked project below:
https://github.com/sonyxperiadev/kernel-defconfig/tree/aosp/LA.UM.9.14.r1
HEAD of the project used to prepare this commit:
https://github.com/sonyxperiadev/kernel-defconfig/tree/9c826971cf0d805fb0a1a9cf32ec57838d20d0fc

Signed-off-by: Alin Jerpelea <alin.jerpelea@sony.com>

--- a/arch/arm64/configs/aosp_murray_pdx225_defconfig
+++ b/arch/arm64/configs/aosp_murray_pdx225_defconfig
@@ -80,6 +80,7 @@ CONFIG_BUILD_ARM64_DT_OVERLAY=y
 CONFIG_TLB_CONF_HANDLER=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_PM_DEBUG=y
 CONFIG_ENERGY_MODEL=y
 CONFIG_CPU_IDLE=y
 CONFIG_ARM_QCOM_LPM_CPUIDLE=y
@@ -91,7 +92,6 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_ARM_SCPI_CPUFREQ=y
 CONFIG_ARM_QCOM_CPUFREQ_HW=y
-CONFIG_ARM_QCOM_CPUFREQ_HW_DEBUG=y
 CONFIG_ARM_SCMI_CPUFREQ=y
 CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_QTI_SCMI_MEMLAT_PROTOCOL=y
@@ -101,7 +101,6 @@ CONFIG_ARM_SCPI_PROTOCOL=y
 # CONFIG_ARM_SCPI_POWER_DOMAIN is not set
 CONFIG_QCOM_SCM=y
 # CONFIG_EFI_ARMSTUB_DTB_LOADER is not set
-CONFIG_QTI_TZ_LOG=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
@@ -285,7 +284,6 @@ CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 # CONFIG_FW_CACHE is not set
 # CONFIG_ALLOW_DEV_COREDUMP is not set
-CONFIG_REGMAP_QTI_DEBUG=y
 CONFIG_MHI_BUS=y
 CONFIG_MHI_UCI=y
 CONFIG_GNSS=y
@@ -346,7 +344,6 @@ CONFIG_PPP_MPPE=y
 CONFIG_PPTP=y
 CONFIG_PPPOL2TP=y
 CONFIG_USB_RTL8152=y
-CONFIG_USB_LAN78XX=y
 CONFIG_USB_USBNET=y
 # CONFIG_USB_NET_AX8817X is not set
 # CONFIG_USB_NET_AX88179_178A is not set
@@ -416,7 +413,6 @@ CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_DEVPORT is not set
 CONFIG_MSM_ADSPRPC=y
 CONFIG_ADSPRPC_QGKI=y
-CONFIG_MSM_RDBG=y
 # CONFIG_I2C_COMPAT is not set
 CONFIG_I2C_CHARDEV=y
 # CONFIG_I2C_HELPER_AUTO is not set
@@ -440,7 +436,6 @@ CONFIG_POWER_RESET_QCOM_REBOOT_REASON=y
 CONFIG_QTI_BATTERY_CHARGER=y
 CONFIG_IFPM_SM5038=y
 CONFIG_QCOM_POWER_SUPPLY=y
-CONFIG_SOMC_BATTERY_CHARGER=y
 CONFIG_SENSORS_QTI_AMOLED_ECM=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_STATISTICS=y
@@ -472,7 +467,6 @@ CONFIG_WATCHDOG_CORE=y
 CONFIG_MFD_ACT8945A=y
 CONFIG_MFD_I2C_PMIC=y
 CONFIG_MFD_SPMI_PMIC=y
-CONFIG_REGULATOR_QTI_DEBUG=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_QTI_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
@@ -505,6 +499,7 @@ CONFIG_DRM_LONTIUM_LT9611UXC=y
 CONFIG_QCOM_KGSL=y
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 CONFIG_DEVFREQ_GOV_QCOM_GPUBW_MON=y
+CONFIG_QCOM_KGSL_IOCOHERENCY_DEFAULT=y
 CONFIG_QCOM_KGSL_CONTEXT_DEBUG=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
@@ -623,7 +618,6 @@ CONFIG_IPA3=y
 CONFIG_IPA_WDI_UNIFIED_API=y
 CONFIG_USB_BAM=y
 CONFIG_MSM_GENI_SE=y
-CONFIG_COMMON_CLK_QCOM_DEBUG=y
 CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_QCOM=y
 CONFIG_QCOM_CLK_SMD_RPM=y
@@ -647,6 +641,7 @@ CONFIG_QCOM_IOMMU_IO_PGTABLE_QUIRKS=y
 CONFIG_QTI_IOMMU_SUPPORT=y
 CONFIG_ARM_SMMU=y
 CONFIG_ARM_SMMU_SKIP_MAP_POWER_ON=y
+CONFIG_IOMMU_TLBSYNC_DEBUG=y
 CONFIG_QCOM_LAZY_MAPPING=y
 CONFIG_QCOM_IOMMU_TLBI_QUIRKS=y
 CONFIG_REMOTEPROC=y
@@ -682,7 +677,6 @@ CONFIG_QCOM_RPMHPD=y
 CONFIG_QCOM_RUN_QUEUE_STATS=y
 CONFIG_QCOM_SMEM=y
 CONFIG_QCOM_MEMORY_DUMP_V2=y
-CONFIG_MSM_REMOTEQDSS=y
 CONFIG_QCOM_SMP2P=y
 CONFIG_QCOM_SMSM=y
 CONFIG_QCOM_SOCINFO=y
@@ -763,9 +757,7 @@ CONFIG_LIBNVDIMM=y
 CONFIG_QCOM_QFPROM_SYSFS=y
 CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
-CONFIG_STM_PROTO_BASIC=y
 CONFIG_SLIMBUS_MSM_NGD=y
-CONFIG_INTERCONNECT_TEST=y
 CONFIG_INTERCONNECT_QCOM=y
 CONFIG_INTERCONNECT_QCOM_HOLI=y
 CONFIG_INTERCONNECT_QCOM_EPSS_L3=y
@@ -879,13 +871,13 @@ CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_INFO_DWARF4=y
 # CONFIG_ENABLE_MUST_CHECK is not set
-CONFIG_DEBUG_FS=y
 CONFIG_HEADERS_INSTALL=y
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_MAGIC_SYSRQ=y
-# CONFIG_DEBUG_MISC is not set
+CONFIG_DEBUG_STACK_USAGE=y
+CONFIG_DEBUG_MEMORY_INIT=y
 CONFIG_PANIC_ON_OOPS=y
-CONFIG_PANIC_TIMEOUT=5
+CONFIG_PANIC_TIMEOUT=-1
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_IPC_LOGGING=y
@@ -894,15 +886,3 @@ CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_QGKI=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
 CONFIG_BUG_ON_DATA_CORRUPTION=y
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_QGKI=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_DUMMY=y
-CONFIG_CORESIGHT_REMOTE_ETM=y
-CONFIG_CORESIGHT_TGU=y
