--- a/arch/arm64/configs/aosp_sagami_pdx214_defconfig
+++ b/arch/arm64/configs/aosp_sagami_pdx214_defconfig
@@ -337,7 +337,6 @@ CONFIG_PPP_MPPE=y
 CONFIG_PPTP=y
 CONFIG_PPPOL2TP=y
 CONFIG_USB_RTL8152=y
-CONFIG_USB_LAN78XX=y
 CONFIG_USB_USBNET=y
 # CONFIG_USB_NET_AX8817X is not set
 # CONFIG_USB_NET_AX88179_178A is not set
@@ -383,13 +382,7 @@ CONFIG_TABLET_USB_GTCO=y
 CONFIG_TABLET_USB_HANWANG=y
 CONFIG_TABLET_USB_KBTAB=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_ATMEL_MXT=y
-CONFIG_TOUCHSCREEN_USB_COMPOSITE=y
 CONFIG_TOUCHSCREEN_SAMSUNG_INCELL=y
-CONFIG_TOUCHSCREEN_FTS=y
-CONFIG_FTS_TRUSTED_TOUCH=y
-CONFIG_TOUCHSCREEN_NT36XXX=y
-CONFIG_NOVATEK_TRUSTED_TOUCH=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_QCOM_HV_HAPTICS=y
@@ -654,8 +647,10 @@ CONFIG_QCOM_LAZY_MAPPING=y
 CONFIG_QCOM_IOMMU_TLBI_QUIRKS=y
 CONFIG_REMOTEPROC=y
 CONFIG_RPMSG_CHAR=y
+CONFIG_RPMSG_QCOM_GLINK_RPM=y
 CONFIG_RPMSG_QCOM_GLINK_SMEM=y
 CONFIG_RPMSG_QCOM_GLINK_SPSS=y
+CONFIG_MSM_RPM_SMD=y
 CONFIG_QCOM_COMMAND_DB=y
 CONFIG_QCOM_MEM_OFFLINE=y
 CONFIG_OVERRIDE_MEMORY_LIMIT=y
@@ -753,7 +748,6 @@ CONFIG_LIBNVDIMM=y
 CONFIG_QCOM_QFPROM_SYSFS=y
 CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
-CONFIG_STM_PROTO_BASIC=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_INTERCONNECT_QCOM=y
 CONFIG_INTERCONNECT_QCOM_LAHAINA=y
@@ -879,15 +873,3 @@ CONFIG_SCHEDSTATS=y
 CONFIG_IPC_LOGGING=y
 CONFIG_IPC_LOG_MINIDUMP_BUFFERS=16
 CONFIG_BUG_ON_DATA_CORRUPTION=y
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_QGKI=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_DUMMY=y
-CONFIG_CORESIGHT_REMOTE_ETM=y
-CONFIG_CORESIGHT_TGU=y
