sm5038: remove duplicate pmic-voter code
remove the duplicate driver to avoind conflict

Signed-off-by: Alin Jerpelea <alin.jerpelea@sony.com>

--- a/drivers/power/supply/Makefile
+++ b/drivers/power/supply/Makefile
@@ -95,4 +95,4 @@ obj-$(CONFIG_CHARGER_WILCO)	+= wilco-charger.o
 obj-$(CONFIG_QTI_BATTERY_CHARGER)	+= qti_battery_charger.o
 obj-$(CONFIG_QCOM_POWER_SUPPLY)		+= qcom/
 obj-$(CONFIG_IFPM_SM5038) += sm5038_drv.o
-sm5038_drv-y += sm5038_core.o sm5038_irq.o sm5038_muic.o sm5038_charger.o sm5038_charger_oper.o sm5038_step_chg_n_jeita.o sm5038_fled.o sm5038_fg.o sm5038_pmic-voter.o
+sm5038_drv-y += sm5038_core.o sm5038_irq.o sm5038_muic.o sm5038_charger.o sm5038_charger_oper.o sm5038_step_chg_n_jeita.o sm5038_fled.o sm5038_fg.o
